add work section and about section

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
         you see and have a project you need coded, don't hestiate to contact me.
       </p>
       <div>
-        <a class="link" href="/connect">
+        <a class="link" href="#">
           <h2 class="intro connect">LET'S CONNECT</h2>
         </a>
       </div>
-      <ul class="intro icons">
+      <ul class="intro headd-icons">
         <li>
           <a href="#">
             <img src="images/twitter.svg" alt="twitter" />
@@ -63,6 +63,197 @@
           </a>
         </li>
       </ul>
+    </section>
+    <!-- Work Section -->
+    <section class="wrapper">
+      <div class="shot">
+        <div class="snapshot"><img src="images/Shot1.svg" alt="tonic" /></div>
+        <div class="block">
+          <h1 class="heading1">Tonic</h1>
+          <div class="subframe">
+            <p class="sub1">CANOPY</p>
+            <div class="circle"></div>
+            <p class="sub2">Back End Dev</p>
+            <div class="circle"></div>
+            <p class="sub2">2015</p>
+          </div>
+          <div class="normal">
+            A daily selection of privately personalized reads; no accounts or
+            sign-ups required.
+          </div>
+          <ul class="icons">
+            <li class="iconsub">html</li>
+            <li class="iconsub">css</li>
+            <li class="iconsub">javaScript</li>
+          </ul>
+          <div class="action">
+            <button class="button" type="button">See Project</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="shot2">
+        <div class="snapshot">
+          <img src="images/shot2.svg" alt="Multi-Post-Stories" />
+        </div>
+        <div class="block2">
+          <h1 class="heading1">Multi-Post<br />Stories</h1>
+          <div class="subframe">
+            <p class="sub1">CANOPY</p>
+            <div class="circle"></div>
+            <p class="sub2">Back End Dev</p>
+            <div class="circle"></div>
+            <p class="sub2">2015</p>
+          </div>
+          <div class="normal">
+            A daily selection of privately personalized reads; no accounts or
+            sign-ups required.
+          </div>
+          <ul class="icons">
+            <li class="iconsub">html</li>
+            <li class="iconsub">css</li>
+            <li class="iconsub">javaScript</li>
+          </ul>
+          <div class="action">
+            <button type="button" class="button">See Project</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="shot">
+        <div class="snapshot">
+          <img src="images/shot3.svg" alt="tonic" />
+        </div>
+        <div class="block">
+          <h1 class="heading1">Tonic</h1>
+          <div class="subframe">
+            <p class="sub1">CANOPY</p>
+            <div class="circle"></div>
+            <p class="sub2">Back End Dev</p>
+            <div class="circle"></div>
+            <p class="sub2">2015</p>
+          </div>
+          <div class="normal">
+            A daily selection of privately personalized reads; no accounts or
+            sign-ups required.
+          </div>
+          <ul class="icons">
+            <li class="iconsub">html</li>
+            <li class="iconsub">css</li>
+            <li class="iconsub">javaScript</li>
+          </ul>
+          <div class="action">
+            <button type="button" class="button">See Project</button>
+          </div>
+        </div>
+      </div>
+      <div class="shot2">
+        <div class="snapshot">
+          <img src="images/shot4.svg" alt="Multi-Post-Stories" />
+        </div>
+        <div class="block2">
+          <h1 class="heading1">Multi-Post<br />Stories</h1>
+          <div class="subframe">
+            <p class="sub1">CANOPY</p>
+            <div class="circle"></div>
+            <p class="sub2">Back End Dev</p>
+            <div class="circle"></div>
+            <p class="sub2">2015</p>
+          </div>
+          <div class="normal">
+            A daily selection of privately personalized reads; no accounts or
+            sign-ups required.
+          </div>
+          <ul class="icons">
+            <li class="iconsub">html</li>
+            <li class="iconsub">css</li>
+            <li class="iconsub">javaScript</li>
+          </ul>
+          <div class="action">
+            <button type="button" class="button">See Project</button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- About Section -->
+    <section class="wrapper">
+      <div class="top">
+        <h1 class="heading2">About <br />Myself</h1>
+        <p class="normaltext">
+          Hello I’m a software developer! I can help you build a product ,
+          feature or website Look through some of my work and experience! If you
+          like what you see and have a project you need coded, don’t hestiate to
+          contact me.
+        </p>
+        <div class="social">
+          <h3>LET’S CONNECT</h3>
+
+          <ul class="vectorframe">
+            <li>
+              <a href="#"><img src="images/github.svg" alt="Github" /></a>
+            </li>
+            <li>
+              <a href="#"><img src="images/linkedin.svg" alt="Linkedin" /></a>
+            </li>
+            <li>
+              <a href="#"><img src="images/vector.svg" alt="Vector" /></a>
+            </li>
+            <li>
+              <a href="#"><img src="images/twitter.svg" alt="Twitter" /></a>
+            </li>
+            <li>
+              <a href="#"><img src="images/micon.svg" alt="M icon" /></a>
+            </li>
+          </ul>
+        </div>
+        <button type="button" class="getbtn">Get my resume</button>
+      </div>
+      <div class="skill">
+        <div class="listframe">
+          <div class="listtag">
+            <p class="listname">Languages</p>
+            <button type="button" class="icon">
+              <img src="images/Disabled-down.svg" alt="button" />
+            </button>
+          </div>
+          <ul class="skillulist">
+            <li class="skilllist">
+              <div class="listimg">
+                <img src="images/js.svg" alt="javascript" />
+              </div>
+              <p class="listtext">JavaSript</p>
+            </li>
+            <li class="skilllist">
+              <div class="listimg">
+                <img src="images/html.svg" alt="html" />
+              </div>
+              <p class="listtext">HTML</p>
+            </li>
+            <li class="skilllist">
+              <div class="listimg"><img src="images/css.svg" alt="CSS" /></div>
+              <p class="listtext">CSS</p>
+            </li>
+          </ul>
+          <div class="listframe">
+            <div class="listtag">
+              <p class="listname">Frameworks</p>
+              <button type="button" class="icon">
+                <img src="images/Disabled-right.svg" alt="button" />
+              </button>
+            </div>
+          </div>
+          <div class="listframe">
+            <div class="listtag">
+              <p class="listname">Skills</p>
+              <button type="button" class="icon">
+                <img src="images/Disabled-right.svg" alt="button3" />
+              </button>
+            </div>
+            <ul class="skillul"></ul>
+          </div>
+        </div>
+      </div>
     </section>
   </body>
 </html>
