replace h1 with h2 and replace div with p

--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
             <div class="circle"></div>
             <p class="sub2">2015</p>
           </div>
-          <div class="normal">
+          <p class="normal">
             A daily selection of privately personalized reads; no accounts or
             sign-ups required.
-          </div>
+          </p>
           <ul class="icons">
             <li class="iconsub">html</li>
             <li class="iconsub">css</li>
@@ -125,7 +125,7 @@
           <img src="images/shot3.svg" alt="tonic" />
         </div>
         <div class="block">
-          <h1 class="heading1">Tonic</h1>
+          <h2 class="heading1">Tonic</h2>
           <div class="subframe">
             <p class="sub1">CANOPY</p>
             <div class="circle"></div>
@@ -187,7 +187,7 @@
           contact me.
         </p>
         <div class="social">
-          <h3>LET’S CONNECT</h3>
+          <h2>LET’S CONNECT</h2>
 
           <ul class="vectorframe">
             <li>
