--- a/index.html
+++ b/index.html
@@ -255,6 +255,7 @@
         </div>
       </div>
     </section>
+    <!-- Contact Form -->
     <footer>
       <div class="contact-form"></div>
       <h2 class="contact-me">Contact me</h2>
@@ -263,7 +264,7 @@
         that you need built or a project that needs coding. I’d love to help
         with it
       </p>
-      <form action="#" id="comment">
+      <form action="https://formspree.io/f/mbjwvgbk" id="comment">
         <input
           type="text"
           id="name"
