add method attribute post

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
         that you need built or a project that needs coding. I’d love to help
         with it
       </p>
-      <form action="https://formspree.io/f/mbjwvgbk" id="comment">
+      <form action="https://formspree.io/f/mbjwvgbk" id="comment" method="post">
         <input
           type="text"
           id="name"
