add UI skeleton for desktop screens

--- a/index.html
+++ b/index.html
@@ -1,300 +1,306 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio</title>
+    <title>Profile template || P1</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
+
   <body>
-    <header>
-      <a href="#" class="logo">
-        <img src="images/MyLogo.svg" alt="My Logo" />
-      </a>
-      <div class="union" id="union">
-        <img src="images/union.svg" alt="union icon" />
-      </div>
-    </header>
-    <section class="head-line">
-      <h1 class="introduction first-text1">
-        I<span>&#8217;</span>m Kumilachew<br />
-        Glad to see <br />
-        you!
-      </h1>
-      <p class="first-text2">
-        I'm a software developer I can help you build a product , feature or
-        website Look through some of my work and experience! If you like what
-        you see and have a project you need coded, don't hestiate to contact me.
-      </p>
-      <div>
-        <a class="link" href="#">
-          <h2 class="intro connect">LET'S CONNECT</h2>
-        </a>
-      </div>
-      <ul class="intro headd-icons">
-        <li>
-          <a href="#">
-            <img src="images/twitter.svg" alt="twitter" />
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <img src="images/linkedin.svg" alt="linkedin" />
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <img src="images/medium.svg" alt="medium" />
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <img src="images/github.svg" alt="github" />
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <img src="images/istock.svg" alt="istock" />
-          </a>
-        </li>
-      </ul>
-    </section>
-    <!-- Work Section -->
-    <section class="wrapper">
-      <div class="shot">
-        <div class="snapshot"><img src="images/Shot1.svg" alt="tonic" /></div>
-        <div class="block">
-          <h1 class="heading1">Tonic</h1>
-          <div class="subframe">
-            <p class="sub1">CANOPY</p>
-            <div class="circle"></div>
-            <p class="sub2">Back End Dev</p>
-            <div class="circle"></div>
-            <p class="sub2">2015</p>
-          </div>
-          <p class="normal">
-            A daily selection of privately personalized reads; no accounts or
-            sign-ups required.
+    <div>
+      <!--The nav bar-->
+      <nav>
+        <h3 class="logo indicator">My Logo</h3>
+        <div>
+          <ul id="desk-list">
+            <li class="indicator">Portoflio</li>
+            <li class="indicator">About</li>
+            <li class="indicator">Contact</li>
+          </ul>
+          <img
+            class="indicator"
+            id="Union-menu"
+            src="images/Union.svg"
+            alt="Union"
+          />
+        </div>
+      </nav>
+      <!--The main section-->
+      <main>
+        <section>
+          I<span>&#8217;</span>m Kumilachew<br />
+          Glad to see <br />
+          you!
+          <p>
+            I'm a software developer! I can help you build a product , feature
+            or website Look through some of my work and experience! If you like
+            what you see and have a project you need coded, don't hestiate to
+            contact me.
           </p>
-          <ul class="icons">
-            <li class="iconsub">html</li>
-            <li class="iconsub">css</li>
-            <li class="iconsub">javaScript</li>
-          </ul>
-          <div class="action">
-            <button class="button" type="button">See Project</button>
-          </div>
-        </div>
-      </div>
 
-      <div class="shot2">
-        <div class="snapshot">
-          <img src="images/shot2.svg" alt="Multi-Post-Stories" />
-        </div>
-        <div class="block2">
-          <h1 class="heading1">Multi-Post<br />Stories</h1>
-          <div class="subframe">
-            <p class="sub1">CANOPY</p>
-            <div class="circle"></div>
-            <p class="sub2">Back End Dev</p>
-            <div class="circle"></div>
-            <p class="sub2">2015</p>
-          </div>
-          <div class="normal">
-            A daily selection of privately personalized reads; no accounts or
-            sign-ups required.
-          </div>
-          <ul class="icons">
-            <li class="iconsub">html</li>
-            <li class="iconsub">css</li>
-            <li class="iconsub">javaScript</li>
-          </ul>
-          <div class="action">
-            <button type="button" class="button">See Project</button>
-          </div>
-        </div>
-      </div>
+          <a class="indicator btn-act">LET'S CONNECT</a>
 
-      <div class="shot">
-        <div class="snapshot">
-          <img src="images/shot3.svg" alt="tonic" />
-        </div>
-        <div class="block">
-          <h2 class="heading1">Tonic</h2>
-          <div class="subframe">
-            <p class="sub1">CANOPY</p>
-            <div class="circle"></div>
-            <p class="sub2">Back End Dev</p>
-            <div class="circle"></div>
-            <p class="sub2">2015</p>
-          </div>
-          <div class="normal">
-            A daily selection of privately personalized reads; no accounts or
-            sign-ups required.
-          </div>
-          <ul class="icons">
-            <li class="iconsub">html</li>
-            <li class="iconsub">css</li>
-            <li class="iconsub">javaScript</li>
+          <ul class="socials">
+            <li class="indicator">
+              <img src="./images/twitter.svg" alt="Twitter" />
+            </li>
+            <li class="indicator">
+              <img src="images/Linkedin.svg" alt="Linkedin" />
+            </li>
+            <li class="indicator">
+              <img src="images/medium.svg" alt="Medium" />
+            </li>
+            <li class="indicator">
+              <img src="images/github.svg" alt="Github" />
+            </li>
+            <li class="indicator">
+              <img src="images/angellist.svg" alt="Angellist" />
+            </li>
           </ul>
-          <div class="action">
-            <button type="button" class="button">See Project</button>
+        </section>
+      </main>
+      <!--work section-->
+      <section id="work-section">
+        <div class="card">
+          <div class="shot-img">
+            <img src="images/Snapshoot-Portfolio-4.png" alt="Tonic" />
           </div>
-        </div>
-      </div>
-      <div class="shot2">
-        <div class="snapshot">
-          <img src="images/shot4.svg" alt="Multi-Post-Stories" />
-        </div>
-        <div class="block2">
-          <h1 class="heading1">Multi-Post<br />Stories</h1>
-          <div class="subframe">
-            <p class="sub1">CANOPY</p>
-            <div class="circle"></div>
-            <p class="sub2">Back End Dev</p>
-            <div class="circle"></div>
-            <p class="sub2">2015</p>
-          </div>
-          <div class="normal">
-            A daily selection of privately personalized reads; no accounts or
-            sign-ups required.
-          </div>
-          <ul class="icons">
-            <li class="iconsub">html</li>
-            <li class="iconsub">css</li>
-            <li class="iconsub">javaScript</li>
-          </ul>
-          <div class="action">
-            <button type="button" class="button">See Project</button>
-          </div>
-        </div>
-      </div>
-    </section>
 
-    <!-- About Section -->
-    <section class="wrapper">
-      <div class="top">
-        <h1 class="heading2">About <br />Myself</h1>
-        <p class="normaltext">
-          Hello I’m a software developer! I can help you build a product ,
-          feature or website Look through some of my work and experience! If you
-          like what you see and have a project you need coded, don’t hestiate to
-          contact me.
-        </p>
-        <div class="social">
-          <h3>LET’S CONNECT</h3>
+          <div class="details">
+            <h2>Multi-Post Stories</h2>
+            <ul>
+              <li>CANOPY</li>
+              <li>Back End Dev</li>
+              <li>2015</li>
+            </ul>
+            <p>
+              A daily selection of privately personalized reads; no accounts or
+              sign-ups required.
+            </p>
+            <menu>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>JavaScript</li>
+            </menu>
+            <a class="btn-act">See Project</a>
+          </div>
+        </div>
 
-          <ul class="vectorframe">
-            <li>
-              <a href="#"><img src="images/github.svg" alt="Github" /></a>
+        <div class="card">
+          <div class="shot-img">
+            <img src="images/Snapshoot-Portfolio.png" alt="Tonic" />
+          </div>
+
+          <div class="details">
+            <h2>Facebook 360</h2>
+            <ul>
+              <li>FACEBOOK</li>
+              <li>FULL Stack Dev</li>
+              <li>2015</li>
+            </ul>
+            <p>
+              Exploring the future of media in Facebook's first Virtual Reality
+              app; a place to discover and enjoy 360 photos and videos on Gear
+              VR.
+            </p>
+            <menu>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>Ruby on rails</li>
+              <li>JavaScript</li>
+            </menu>
+            <a class="btn-act">See Project</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="shot-img">
+            <img src="images/Snapshoot-Portfolio-1.png" alt="Tonic" />
+          </div>
+
+          <div class="details">
+            <h2>Uber Navigations</h2>
+            <ul>
+              <li>UBER</li>
+              <li>Lead Developer</li>
+              <li>2018</li>
+            </ul>
+            <p>
+              A smart assistant to make driving more safe, efficient, and fun by
+              unlocking your most expensive computer: your car.
+            </p>
+            <menu>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>Ruby on rails</li>
+              <li>JavaScript</li>
+            </menu>
+            <a class="btn-act">See Project</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="shot-img">
+            <img src="images/Snapshoot-Portfolio-2.png" alt="Tonic" />
+          </div>
+
+          <div class="details">
+            <h2>Multi-Post Stories</h2>
+            <ul>
+              <li>CANOPY</li>
+              <li>Back End Dev</li>
+              <li>2015</li>
+            </ul>
+            <p>
+              A daily selection of privately personalized reads; no accounts or
+              sign-ups required.
+            </p>
+            <menu>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>Ruby on rails</li>
+              <li>JavaScript</li>
+            </menu>
+            <a class="btn-act">See Project</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="shot-img">
+            <img src="images/Snapshoot-Portfolio-3.png" alt="Tonic" />
+          </div>
+
+          <div class="details">
+            <h2>Multi-Post Stroies</h2>
+            <ul>
+              <li>FACEBOOK</li>
+              <li>FULL Stack Dev</li>
+              <li>2015</li>
+            </ul>
+            <p>
+              Experimental content creation feature that allows users to add to
+              an existing story over the course of a day without spamming their
+              friends.
+            </p>
+            <menu>
+              <li>html</li>
+              <li>css</li>
+              <li>Ruby on rails</li>
+              <li>javaScript</li>
+            </menu>
+            <a class="btn-act">See Project</a>
+          </div>
+        </div>
+      </section>
+      <!-- About Section -->
+      <section id="personal">
+        <div id="about-me">
+          <h3>About mySelf</h3>
+          <p>
+            I'm a software developer! I can help you build a product , feature
+            or website Look through some of my work and experience! If you like
+            what you see and have a project you need coded, don't hestiate to
+            contact me.
+          </p>
+
+          <a class="indicator btn-act">LET'S CONNECT</a>
+
+          <ul class="socials">
+            <li class="indicator">
+              <img src="images/twitter.svg" alt="Twitter" />
             </li>
-            <li>
-              <a href="#"><img src="images/linkedin.svg" alt="Linkedin" /></a>
+            <li class="indicator">
+              <img src="images/Linkedin.svg" alt="Linkedin" />
             </li>
-            <li>
-              <a href="#"><img src="images/vector.svg" alt="Vector" /></a>
+            <li class="indicator">
+              <img src="images/medium.svg" alt="Medium" />
             </li>
-            <li>
-              <a href="#"><img src="images/twitter.svg" alt="Twitter" /></a>
+            <li class="indicator">
+              <img src="images/github.svg" alt="Github" />
             </li>
-            <li>
-              <a href="#"><img src="images/micon.svg" alt="M icon" /></a>
+            <li class="indicator">
+              <img src="images/angellist.svg" alt="Angellist" />
+            </li>
+          </ul>
+          <a class="btn btn-act">Get my resume</a>
+        </div>
+
+        <div id="me-2">
+          <ul id="skiill-section">
+            <li id="languages">
+              <h4>
+                Languages
+                <img src="images/down.svg" alt="Arrow" />
+              </h4>
+              <ul>
+                <li>
+                  <img src="images/js.png" alt="js" />
+                  <h6>JavaScript</h6>
+                </li>
+                <li>
+                  <img src="images/html5.png" alt="html" />
+                  <h6>HTML</h6>
+                </li>
+                <li>
+                  <img src="images/css3.png" alt="css" />
+                  <h6>CSS</h6>
+                </li>
+              </ul>
+            </li>
+            <li id="frameworks">
+              <h4>
+                Frameworks
+                <img src="images/down.svg" alt="Arrow" />
+              </h4>
+              <ul></ul>
+            </li>
+            <li id="skills">
+              <h4>
+                Skills
+                <img src="images/down.svg" alt="Arrow" />
+              </h4>
+              <ul></ul>
             </li>
           </ul>
         </div>
-        <button type="button" class="getbtn">Get my resume</button>
-      </div>
-      <div class="skill">
-        <div class="listframe">
-          <div class="listtag">
-            <p class="listname">Languages</p>
-            <button type="button" class="icon">
-              <img src="images/Disabled-down.svg" alt="button" />
-            </button>
-          </div>
-          <ul class="skillulist">
-            <li class="skilllist">
-              <div class="listimg">
-                <img src="images/js.svg" alt="javascript" />
-              </div>
-              <p class="listtext">JavaSript</p>
-            </li>
-            <li class="skilllist">
-              <div class="listimg">
-                <img src="images/html.svg" alt="html" />
-              </div>
-              <p class="listtext">HTML</p>
-            </li>
-            <li class="skilllist">
-              <div class="listimg"><img src="images/css.svg" alt="CSS" /></div>
-              <p class="listtext">CSS</p>
-            </li>
-          </ul>
-          <div class="listframe">
-            <div class="listtag">
-              <p class="listname">Frameworks</p>
-              <button type="button" class="icon">
-                <img src="images/Disabled-right.svg" alt="button" />
-              </button>
-            </div>
-          </div>
-          <div class="listframe">
-            <div class="listtag">
-              <p class="listname">Skills</p>
-              <button type="button" class="icon">
-                <img src="images/Disabled-right.svg" alt="button3" />
-              </button>
-            </div>
-            <ul class="skillul"></ul>
-          </div>
+      </section>
+      <section id="contact-me">
+        <div>
+          <h2>Contact me</h2>
+          <p>
+            If you have an application you are interested in developing, a
+            feature that you need built or a project that needs coding. I'd love
+            to help with it
+          </p>
         </div>
-      </div>
-    </section>
-    <!-- Contact Form -->
-    <footer>
-      <div class="contact-form"></div>
-      <h2 class="contact-me">Contact me</h2>
-      <p class="para-text">
-        If you have an application you are interested in developing, a feature
-        that you need built or a project that needs coding. I’d love to help
-        with it
-      </p>
-      <form action="https://formspree.io/f/mbjwvgbk" id="comment" method="post">
-        <input
-          type="text"
-          id="name"
-          placeholder="Kumilachew"
-          minlength="1"
-          maxlength="30"
-          required
-        />
-        <input
-          type="email"
-          id="email"
-          placeholder="kumilachew1212@gmail.com"
-          required
-        />
-        <textarea
-          form="comment"
-          placeholder="Write your message here"
-          required
-          minlength="1"
-          maxlength="500"
-          name="msg"
-          id="msg"
-          cols="30"
-          rows="10"
-        ></textarea>
-        <button type="submit" class="btn">Get In Touch</button>
-      </form>
-      <div class="ending">
-        <img src="images/Shape@2x.svg" alt="shape" />
-      </div>
-    </footer>
+
+        <form action="https://formspree.io/f/mbjwvgbk" method="post">
+          <input
+            name="Name"
+            type="text"
+            placeholder="Input your name"
+            minlength="1"
+            maxlength="30"
+            required
+          />
+          <input
+            name="Email"
+            type="email"
+            placeholder="Input your email"
+            required
+          />
+          <textarea
+            name="message"
+            id="message"
+            placeholder="Write your massege here"
+            maxlength="500"
+            required
+          ></textarea>
+          <button type="submit">Get in touch</button>
+        </form>
+      </section>
+    </div>
   </body>
 </html>
