remove blank spaces and rename title name

--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Profile template || P1</title>
+    <title>Personal Portoflio</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
-
   <body>
     <div>
       <!--The nav bar-->
@@ -39,9 +38,7 @@
             what you see and have a project you need coded, don't hestiate to
             contact me.
           </p>
-
           <a class="indicator btn-act">LET'S CONNECT</a>
-
           <ul class="socials">
             <li class="indicator">
               <img src="./images/twitter.svg" alt="Twitter" />
@@ -67,7 +64,6 @@
           <div class="shot-img">
             <img src="images/Snapshoot-Portfolio-4.png" alt="Tonic" />
           </div>
-
           <div class="details">
             <h2>Multi-Post Stories</h2>
             <ul>
@@ -87,12 +83,10 @@
             <a class="btn-act">See Project</a>
           </div>
         </div>
-
         <div class="card">
           <div class="shot-img">
             <img src="images/Snapshoot-Portfolio.png" alt="Tonic" />
           </div>
-
           <div class="details">
             <h2>Facebook 360</h2>
             <ul>
@@ -114,12 +108,10 @@
             <a class="btn-act">See Project</a>
           </div>
         </div>
-
         <div class="card">
           <div class="shot-img">
             <img src="images/Snapshoot-Portfolio-1.png" alt="Tonic" />
           </div>
-
           <div class="details">
             <h2>Uber Navigations</h2>
             <ul>
@@ -140,12 +132,10 @@
             <a class="btn-act">See Project</a>
           </div>
         </div>
-
         <div class="card">
           <div class="shot-img">
             <img src="images/Snapshoot-Portfolio-2.png" alt="Tonic" />
           </div>
-
           <div class="details">
             <h2>Multi-Post Stories</h2>
             <ul>
@@ -166,12 +156,10 @@
             <a class="btn-act">See Project</a>
           </div>
         </div>
-
         <div class="card">
           <div class="shot-img">
             <img src="images/Snapshoot-Portfolio-3.png" alt="Tonic" />
           </div>
-
           <div class="details">
             <h2>Multi-Post Stroies</h2>
             <ul>
@@ -204,9 +192,7 @@
             what you see and have a project you need coded, don't hestiate to
             contact me.
           </p>
-
           <a class="indicator btn-act">LET'S CONNECT</a>
-
           <ul class="socials">
             <li class="indicator">
               <img src="images/twitter.svg" alt="Twitter" />
@@ -226,7 +212,6 @@
           </ul>
           <a class="btn btn-act">Get my resume</a>
         </div>
-
         <div id="me-2">
           <ul id="skiill-section">
             <li id="languages">
@@ -274,7 +259,6 @@
             to help with it
           </p>
         </div>
-
         <form action="https://formspree.io/f/mbjwvgbk" method="post">
           <input
             name="Name"
