--- a/index.html
+++ b/index.html
@@ -29,15 +29,11 @@
       <!--The main section-->
       <main>
         <section>
-          <h1>
-            I<span>&#8217;</span>m Kumilachew<br />
-            Glad to see <br />
-            you!
-          </h1>
+          <h1>I'm Kumilachew Glad to see you!</h1>
           <p>
-            I'm a software developer! I can help you build a product , feature
+            I’m a software developer! I can help you build a product , feature
             or website Look through some of my work and experience! If you like
-            what you see and have a project you need coded, don't hestiate to
+            what you see and have a project you need coded, don’t hestiate to
             contact me.
           </p>
           <a class="indicator btn-act">LET'S CONNECT</a>
@@ -252,6 +248,7 @@
           </ul>
         </div>
       </section>
+      <!-- Contact Section -->
       <section id="contact-me">
         <div>
           <h2>Contact me</h2>
