apply custom-property-pattern

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           </ul>
           <img
             class="indicator"
-            id="Union-menu"
+            id="union-menu"
             src="images/Union.svg"
             alt="Union"
           />
