check and change the path icon

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
           <a class="indicator btn-act">LET'S CONNECT</a>
           <ul class="socials">
             <li class="indicator">
-              <img src="./images/twitter.svg" alt="Twitter" />
+              <img src="images/twitter.svg" alt="Twitter" />
             </li>
             <li class="indicator">
-              <img src="images/Linkedin.svg" alt="Linkedin" />
+              <img src="images/linkedin.svg" alt="Linkedin" />
             </li>
             <li class="indicator">
               <img src="images/medium.svg" alt="Medium" />
