check icon issues

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               <img src="images/twitter.svg" alt="Twitter" />
             </li>
             <li class="indicator">
-              <img src="images/linkedin.svg" alt="Linkedin" />
+              <img src="images/linkedin.svg" alt="LinkedIn" />
             </li>
             <li class="indicator">
               <img src="images/medium.svg" alt="Medium" />
@@ -196,7 +196,7 @@
               <img src="images/twitter.svg" alt="Twitter" />
             </li>
             <li class="indicator">
-              <img src="images/Linkedin.svg" alt="Linkedin" />
+              <img src="images/linkedin.svg" alt="LinkedIn" />
             </li>
             <li class="indicator">
               <img src="images/medium.svg" alt="Medium" />
