modify image paths

--- a/index.html
+++ b/index.html
@@ -39,19 +39,19 @@
           <a class="indicator btn-act">LET'S CONNECT</a>
           <ul class="socials">
             <li class="indicator">
-              <img src="images/twitter.svg" alt="Twitter" />
+              <img src="./images/twitter.svg" alt="Twitter" />
             </li>
             <li class="indicator">
-              <img src="images/linkedin.svg" alt="LinkedIn" />
+              <img src="./images/linkedin.svg" alt="LinkedIn" />
             </li>
             <li class="indicator">
-              <img src="images/medium.svg" alt="Medium" />
+              <img src="./images/medium.svg" alt="Medium" />
             </li>
             <li class="indicator">
-              <img src="images/github.svg" alt="Github" />
+              <img src="./images/github.svg" alt="Github" />
             </li>
             <li class="indicator">
-              <img src="images/angellist.svg" alt="Angellist" />
+              <img src="./images/angellist.svg" alt="Angellist" />
             </li>
           </ul>
         </section>
@@ -60,7 +60,7 @@
       <section id="work-section">
         <div class="card">
           <div class="shot-img">
-            <img src="images/Snapshoot-Portfolio-4.png" alt="Tonic" />
+            <img src="./images/Snapshoot-Portfolio-4.png" alt="Tonic" />
           </div>
           <div class="details">
             <h2>Multi-Post Stories</h2>
@@ -83,7 +83,7 @@
         </div>
         <div class="card">
           <div class="shot-img">
-            <img src="images/Snapshoot-Portfolio.png" alt="Tonic" />
+            <img src="./images/Snapshoot-Portfolio.png" alt="Tonic" />
           </div>
           <div class="details">
             <h2>Facebook 360</h2>
@@ -108,7 +108,7 @@
         </div>
         <div class="card">
           <div class="shot-img">
-            <img src="images/Snapshoot-Portfolio-1.png" alt="Tonic" />
+            <img src="./images/Snapshoot-Portfolio-1.png" alt="Tonic" />
           </div>
           <div class="details">
             <h2>Uber Navigations</h2>
@@ -132,7 +132,7 @@
         </div>
         <div class="card">
           <div class="shot-img">
-            <img src="images/Snapshoot-Portfolio-2.png" alt="Tonic" />
+            <img src="./images/Snapshoot-Portfolio-2.png" alt="Tonic" />
           </div>
           <div class="details">
             <h2>Multi-Post Stories</h2>
@@ -156,7 +156,7 @@
         </div>
         <div class="card">
           <div class="shot-img">
-            <img src="images/Snapshoot-Portfolio-3.png" alt="Tonic" />
+            <img src="./images/Snapshoot-Portfolio-3.png" alt="Tonic" />
           </div>
           <div class="details">
             <h2>Multi-Post Stroies</h2>
@@ -193,19 +193,19 @@
           <a class="indicator btn-act">LET'S CONNECT</a>
           <ul class="socials">
             <li class="indicator">
-              <img src="images/twitter.svg" alt="Twitter" />
+              <img src="./images/twitter.svg" alt="Twitter" />
             </li>
             <li class="indicator">
-              <img src="images/linkedin.svg" alt="LinkedIn" />
+              <img src="./images/linkedin.svg" alt="LinkedIn" />
             </li>
             <li class="indicator">
-              <img src="images/medium.svg" alt="Medium" />
+              <img src="./images/medium.svg" alt="Medium" />
             </li>
             <li class="indicator">
-              <img src="images/github.svg" alt="Github" />
+              <img src="./images/github.svg" alt="Github" />
             </li>
             <li class="indicator">
-              <img src="images/angellist.svg" alt="Angellist" />
+              <img src="./images/angellist.svg" alt="Angellist" />
             </li>
           </ul>
           <a class="btn btn-act">Get my resume</a>
@@ -215,19 +215,19 @@
             <li id="languages">
               <h4>
                 Languages
-                <img src="images/down.svg" alt="Arrow" />
+                <img src="./images/down.svg" alt="Arrow" />
               </h4>
               <ul>
                 <li>
-                  <img src="images/js.png" alt="js" />
+                  <img src="./images/js.png" alt="js" />
                   <h6>JavaScript</h6>
                 </li>
                 <li>
-                  <img src="images/html5.png" alt="html" />
+                  <img src="./images/html5.png" alt="html" />
                   <h6>HTML</h6>
                 </li>
                 <li>
-                  <img src="images/css3.png" alt="css" />
+                  <img src="./images/css3.png" alt="css" />
                   <h6>CSS</h6>
                 </li>
               </ul>
@@ -235,13 +235,13 @@
             <li id="frameworks">
               <h4>
                 Frameworks
-                <img src="images/down.svg" alt="Arrow" />
+                <img src="./images/down.svg" alt="Arrow" />
               </h4>
             </li>
             <li id="skills">
               <h4>
                 Skills
-                <img src="images/down.svg" alt="Arrow" />
+                <img src="./images/down.svg" alt="Arrow" />
               </h4>
               <ul></ul>
             </li>
