fix hamberger icon issues

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <img
             class="indicator"
             id="union-menu"
-            src="images/Union.svg"
+            src="./images/union.svg"
             alt="Union"
           />
         </div>
