add mobile menu skeleton

--- a/index.html
+++ b/index.html
@@ -10,22 +10,7 @@
   <body>
     <div>
       <!--The nav bar-->
-      <nav>
-        <h3 class="logo indicator">My Logo</h3>
-        <div>
-          <ul id="desk-list">
-            <li class="indicator">Portoflio</li>
-            <li class="indicator">About</li>
-            <li class="indicator">Contact</li>
-          </ul>
-          <img
-            class="indicator"
-            id="union-menu"
-            src="./images/union.svg"
-            alt="Union"
-          />
-        </div>
-      </nav>
+
       <!--The main section-->
       <main>
         <section>
@@ -284,5 +269,6 @@
         </form>
       </section>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
